small change to blurb dies

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Dies</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>Sample die designs of varying complexity used to produce architectural, automotive and industrial extrusions.Multi pocket designs with spreading techonolology are featured in the portfolio.</p>
 									</div>
 								</div>
 							</section>
@@ -123,7 +123,7 @@
 									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Ancillary Tooling</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>Tooling used to support the production of aluminium extrusion are shown. In perticular inserts, bolsters are featured within. Accesory tooling such as dummy blocks, shearblades die slides are also included.</p>
 									</div>
 								</div>
 							</section>
@@ -161,18 +161,7 @@
 									<li><a href="#">Sed et dapibus mattis</a></li>
 								</ul>
 							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
+
 							<section class="col-6 col-12-narrower">
 								<h3>Get In Touch</h3>
 								<form>
