--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>With over 50 Years of combined experience - let our design expertise guied you to sucess.</h2>
+							<h2>With over 50 Years of combined experience - let our design expertise guied you to success.</h2>
 							<p>Checkout a sample of our portfolio below.</p>
 						</header>
 					</div>
