dynamic picture sizes
figured out how to get higher resolution pictures depending on the size of the screen. we can have different sizes.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<header>
-						<!--<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>-->
-                        <h2>Professional extrusion tooling solutions for commercial die shops</em></h2>
-                        
-						<a href="#" class="button">Learn More</a>
-					</header>
+
 				</section>
 
 			<!-- Highlights -->
@@ -81,7 +76,7 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-industry"></i>
 									<h3>Manufacture</h3>
-									<p>We provide you with extrusion dies extrusion tooling. Our expertise  and  manufacturing partners  will deliver cost effective and reliable tooling sent directly to your door.</p>
+									<p>We provide you with extrusion dies and extrusion tooling. Our expertise  and  manufacturing partners  will deliver cost effective and reliable tooling sent directly to your door.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
@@ -114,7 +109,7 @@
 									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Dies</h3>
-										<p>Sample die designs of varying complexity used to produce architectural, automotive and industrial extrusions.Multi pocket designs with spreading techonolology are featured in the portfolio.</p>
+										<p>Sample die designs of varying complexity used to produce architectural, automotive and industrial extrusions.</p>
 									</div>
 								</div>
 							</section>
@@ -123,7 +118,7 @@
 									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Ancillary Tooling</h3>
-										<p>Tooling used to support the production of aluminium extrusion are shown. In perticular inserts, bolsters are featured within. Accesory tooling such as dummy blocks, shearblades die slides are also included.</p>
+										<p>Samples of support tooling. Die rings, insert holders, Shear blades etc.</p>
 									</div>
 								</div>
 							</section>
@@ -139,7 +134,7 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Are you ready to extrude the perfect profile?</h2>
+							<h2>Are you ready to experience the ExtrudiT difference ?</h2>
 							<a href="#" class="button">Contact us</a>
 						</header>
 					</div>
