--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo" style="font-family:impact">Extrud<span style="color:#5b9bd5">iT</span> 
+						<h1><a href="index.html" id="logo" style="font-family:impact"><span style="color:#5b9bd5">Extrud</span>iT</span> 
+                            <!--<a href="index.html" id="logo" style="font-family:impact">Extrud<span style="color:#5b9bd5">iT</span> -->
                             <em><span style="font-family:calibri" > - Aluminium extrusion tooling solutions</span> </em></a></h1>
                             <!--<em><span style="font-family:calibri" > - Aluminium extrusion dies and tools</span> </em></a></h1>-->
                             
@@ -58,16 +59,16 @@
 
 			<!-- Banner -->
 				<section id="banner">
-<<<<<<< HEAD
 
-=======
+
+
 					<header>
 						<!--<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>-->
                         <h2>Professional extrusion die solutions for commercial die shops</em></h2>
                         
 						<a href="#" class="button">Learn More</a>
 					</header>
->>>>>>> parent of d943964... Update index.html
+
 				</section>
 
 			<!-- Highlights -->
@@ -85,11 +86,11 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-industry"></i>
 									<h3>Manufacture</h3>
-<<<<<<< HEAD
+
 									<p>We provide you with extrusion dies and extrusion tooling. Our expertise  and  manufacturing partners  will deliver cost effective and reliable tooling sent directly to your door.</p>
-=======
+
 									<p>We provide a turnkey solution for creating extrusion tooling. Our expertise  and  manufacturing partners  will deliver cost effective and reliable tooling sent directly to your door.</p>
->>>>>>> parent of d943964... Update index.html
+
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
