changed manes of menu
deleted repeted paragraph

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="left-sidebar.html">Design</a></li>
+								<li><a href="right-sidebar.html">Manufacture</a></li>
+								<li><a href="two-sidebar.html">Consult</a></li>
+								<li><a href="no-sidebar.html">About us</a></li>
 							</ul>
 						</nav>
 
@@ -89,7 +89,6 @@
 
 									<p>We provide you with extrusion dies and extrusion tooling. Our expertise  and  manufacturing partners  will deliver cost effective and reliable tooling sent directly to your door.</p>
 
-									<p>We provide a turnkey solution for creating extrusion tooling. Our expertise  and  manufacturing partners  will deliver cost effective and reliable tooling sent directly to your door.</p>
 
 								</div>
 							</section>
