--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Manufacture</a></li>
 								<li><a href="right-sidebar.html">Consult</a></li>
-								<li><a href="two-sidebar.html">Meet The Team</a></li>
+								<li><a href="two-sidebar.html">About Us</a></li>
 								<li><a href="no-sidebar.html">Contact Us </a></li>
 							</ul>
 						</nav>
