added about us and some changes to hyperlinks

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                                            
 											<a href="#">Extrusion Dies</a>
 											<ul>
-												<li><a href="#">Single Cavity Dies</a></li>
-												<li><a href="#">Multi Cavity Dies</a></li>
 												<li><a href="#">Solid Dies</a></li>
+												<li><a href="#">Hallow Dies</a></li>
+												<li><a href="#">Center Port Dies</a></li>
                                                 
 											</ul>
 										</li>
@@ -58,8 +58,8 @@
 								</li>
 								<li><a href="left-sidebar.html">Manufacture</a></li>
 								<li><a href="right-sidebar.html">Consult</a></li>
-								<li><a href="two-sidebar.html">About Us</a></li>
-								<li><a href="no-sidebar.html">Contact Us </a></li>
+								<li><a href="aboutus.html">About Us</a></li>
+								<li><a href="contactus.html">Contact Us </a></li>
 							</ul>
 						</nav>
 
