modiifcations to menu hyperlink and added consult.

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,7 @@
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Manufacture</a></li>
-								<li><a href="right-sidebar.html">Consult</a></li>
+								<li><a href="consult.html">Consult</a></li>
 								<li><a href="aboutus.html">About Us</a></li>
 								<li><a href="contactus.html">Contact Us </a></li>
 							</ul>
@@ -73,10 +73,8 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>About ExtrudiT</h3>
+											<p>ExtrudiT LTD is a company whos principal opearions include extrusion die design, extrusion tooling design and training activities that pertain to the manufacture of aluminium extrusion dies and aluminium extrusion processes.</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
@@ -113,8 +111,8 @@
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
 											<p>ExtrudiT Limited was formed to provide a comprehensive service to the Australasian Aluminium Extrusion Industry.
-The core business of ExtrudiT Limited is Aluminium extrusion product development, die design, die correction, dies and tooling, training, courses, aluminium extrusion production optimization and consultancy services.
-We are experienced and dedicated to making your ideas take shape.</p>
+                                                The core business of ExtrudiT Limited is Aluminium extrusion product development, die design, die correction, dies and tooling, training, courses, aluminium extrusion production optimization and consultancy services.
+                                                We are experienced and dedicated to making your ideas take shape.</p>
 
 											<h3>The Team</h3>
                                             <h4>Matthias Schneider - Director</h4>
