--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Manufacture</a></li>
-								<li><a href="right-sidebar.html">Consult</a></li>
+								<li><a href="consult.html">Consult</a></li>
 								<li><a href="aboutus.html">About Us</a></li>
 								<li><a href="contactus.html">Contact Us </a></li>
 							</ul>
