--- a/manufacture.html
+++ b/manufacture.html
@@ -22,7 +22,6 @@
                             <!--<a href="index.html" id="logo" style="font-family:impact">Extrud<span style="color:#5b9bd5">iT</span> -->
                             <em><span style="font-family:calibri" > - Aluminium extrusion tooling solutions</span> </em></a></h1>
                             <!--<em><span style="font-family:calibri" > - Aluminium extrusion dies and tools</span> </em></a></h1>-->
-
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
@@ -59,7 +58,6 @@
 								<li><a href="contactus.html">Contact Us </a></li>
 							</ul>
 						</nav>
-
 				</div>
 
 			<!-- Main -->
@@ -72,8 +70,10 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>About ExtrudiT</h3>
-											<p>ExtrudiT LTD is a company whos principal opearions include extrusion die design, extrusion tooling design and training activities that pertain to the manufacture of aluminium extrusion dies and aluminium extrusion processes.</p>
+											<h3>Just a Subheading</h3>
+											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
@@ -103,22 +103,27 @@
 
 										<article>
 											<header>
-												<h2 style="text-align:center;">AboutUs</h2>
-												<!--<p style="text-align:center;">Extrusion tool design company making your ideas take shape</p> -->
+												<h2>Extrusion Dies</h2>
+												<p>Let us help you source extrusion dies.</p>
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>ExtrudiT Limited was formed to provide a comprehensive service to the Australasian Aluminium Extrusion Industry.
-                                                The core business of ExtrudiT Limited is Aluminium extrusion product development, die design, die correction, dies and tooling, training, courses, aluminium extrusion production optimization and consultancy services.
-                                                We are experienced and dedicated to making your ideas take shape.</p>
+											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+											consequat etiam lorem ipsum dolor sit amet nullam.</p>
 
-											<h3>The Team</h3>
-                                            <h4>Matthias Schneider - Director</h4>
-                                            <span class="image featured"><img src="images/ms-headshot.jpg" alt="" /></span>
-											<p>Experienced Aluminum Extruder and Extrusion Tool Designer with a demonstrated history of working in the mechanical or industrial engineering industry. Skilled in Statistical Tools, Office products, Computer-Aided Design (CAD), SolidWorks, and Production Planning. Strong design/production professional with an Advanced Trade Certificate focused on Mechanical Engineering Related Technologies/Technicians from the Chamber of Trade in Koblenz Germany. </p>
-                                            <h4>Sudhakar Somu - Director</h4>
-                                            <span class="image featured"><img src="images/sd-headshot.jpg" alt="" /></span>
+											<h3>And Yet Another Subheading</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
+											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
+											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
+											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
+											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
+											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+
 											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
 											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
 											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
