--- a/contactus.html
+++ b/contactus.html
@@ -74,7 +74,7 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>We would love to here from you!</h3>
+											<h3>We would like to hear from you!</h3>
 											<p> The team at ExtrudiT live and breathe all things aluminium extrusion related. If you have any questions regarding the design and procurement of aluminium extrusion dies or would like to talk about optimising your processes, do not hesitate to contact us.</p>
 										</section>
 
@@ -116,7 +116,7 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-phone"></i>
 									<h3>Phone</h3>
-                                    <p>Mobile:<br> +64 21XXXXXXX  <br> or <br> +64XXXXXXX 
+                                    <p>For Queries in English, Deutsche and Español phone:<br> +64 21XXXXXXX  <br> <br> For Queries in English, Hindi and Telugu phone: <br> +64XXXXXXX 
                                     </p>
 								</div>
 							</section>
@@ -124,8 +124,9 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-envelope-open-text"></i>
 									<h3>Email</h3>
-
-									<p>info@extrudit.co.nz</p>
+                                    <a href="mailto:info@extrudit.co.nz">info@extrudit.co.nz</a>  
+                                    <br><br> 
+									<p> Or get in touch by using the contact form below</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
@@ -133,8 +134,8 @@
 									<i class="icon solid major fa-map-marker-alt"></i>
 									<h3>Office Locations</h3>
                                     <p>Headquarters:<br>
-                                        7/98 Dinsdale Rd, Dinsdale, Waikato 3204, NZ </p>
-									<p>Support office: <br>14A clinker Street, Three Kings, Auckland 1042, NZ</p>
+                                        7/98 Dinsdale Rd, Dinsdale, Hamilton 3204, NZ </p>
+									<p>Support office: <br>14A Clinker Street, Three Kings, Auckland 1042, NZ</p>
 
 								</div>
 							</section>
