--- a/manufacture.html
+++ b/manufacture.html
@@ -70,10 +70,8 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>The ExtrudiT difference</h3>
+											<p>We belive a good Extrusion die is one that offers a balance of achieving low manufacturing cost, high extrusion productivity whilst producing dimensional true extrusion with good properties and long service life.</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
@@ -109,10 +107,7 @@
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<p>Let ExtrudiT design, procure and deliver your next extrusion die. We understand that every customers requirments are unique - using our combination of excellent design, a well made die and a controlled extrusion process, you are well on your way to acheive success with ease.</p>
 
 											<h3>And Yet Another Subheading</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
