--- a/manufacture.html
+++ b/manufacture.html
@@ -71,7 +71,7 @@
 
 										<section>
 											<h3>The ExtrudiT difference</h3>
-											<p>We belive a good Extrusion die is one that offers a balance of achieving low manufacturing cost, high extrusion productivity whilst producing dimensional true extrusion with good properties and long service life.</p>
+											<p>We belive a good Extrusion die is one that offers a balance of achieving low manufacturing cost, high extrusion productivity whilst producing dimentionally true extrusions with good mechanical and cosmentic properties with a long service life.</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
@@ -107,24 +107,10 @@
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>Let ExtrudiT design, procure and deliver your next extrusion die. We understand that every customers requirments are unique - using our combination of excellent design, a well made die and a controlled extrusion process, you are well on your way to acheive success with ease.</p>
+											<p>Let ExtrudiT design, procure and deliver your next extrusion die. We understand that every customer's requirments are unique - using our combination of excellent design, a well made die and a controlled extrusion process, you are well on your way to acheive success with ease.</p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<h3>Quality Extrusions Start Here</h3>
+											<p>Every profile is unique. The correct combination of excellent die design, combined with  a well made die which adheres to quality manufacturing processes and a tightly controlled extrusion are requirements to produces extrusions of outstanding quality. Dies created with an established manufacturing process and the right metallurgical structure are key to producing a quality extrusion. Let us take the inconvinience out of extruding the perfect profile by coordnating the design, manufacture and procurement of quality extrusion dies - and delivering them to your front door. </p>
 										</article>
 
 								</div>
