--- a/consult.html
+++ b/consult.html
@@ -74,12 +74,10 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>Dies and Tools</h3>
+											<p>We know what it takes to create fantastic extrusion, but the path to the perfect extrusion is paved with many problems - from impropper tooling to impropperly designed dies, problems can creep in from every direction. ExtrudiT have the knowhow to to solve the challanges associated with impropper tooling,  poor die design and sub optimal manufacturing processes. </p>
 											<footer>
-												<a href="#" class="button">Continue Reading</a>
+												<a href="#" class="button">Contact us now</a>
 											</footer>
 										</section>
 
@@ -120,7 +118,7 @@
                                             
                                             <h3>Access our knowledgebase</h3>
                                             
-											<p>Our inhouse expertise combined with the knowlege of our strategic partners can help you become more operationally efficent by improving your die manufacturing processes.</p>
+											<p>Our inhouse expertise combined with the knowlege of our strategic partners can help you become more operationally efficent by improving your extrusion processes.</p>
 										</article>
 
 								</div>
