changed hyper link names

--- a/aboutus.html
+++ b/aboutus.html
@@ -75,7 +75,7 @@
 											<h3>About ExtrudiT</h3>
 											<p>ExtrudiT LTD is a company whos principal opearions include extrusion die design, extrusion tooling design and training activities that pertain to the manufacture of aluminium extrusion dies and aluminium extrusion processes.</p>
 											<footer>
-												<a href="#" class="button">Continue Reading</a>
+												<a href="#" class="button">Contact Us</a>
 											</footer>
 										</section>
 
@@ -150,15 +150,16 @@
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>Quick Navigation</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Extrusion Die Design</a></li>
+									<li><a href="#">Tooling Design</a></li>
+									<li><a href="#">Manufacture</a></li>
+									<li><a href="#">Consult</a></li>
+									<li><a href="#">About Us</a></li>
+									<li><a href="#">Contact Us</a></li>
+									
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
