--- a/consult.html
+++ b/consult.html
@@ -77,7 +77,7 @@
 											<h3>Dies and Tools</h3>
 											<p>We know what it takes to create fantastic extrusion, but the path to the perfect extrusion is paved with many problems - from impropper tooling to impropperly designed dies, problems can creep in from every direction. ExtrudiT have the knowhow to to solve the challanges associated with impropper tooling,  poor die design and sub optimal manufacturing processes. </p>
 											<footer>
-												<a href="#" class="button">Contact us now</a>
+												<a href="#" class="button">Contact us</a>
 											</footer>
 										</section>
 
@@ -144,15 +144,15 @@
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>Quick Navigation</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Extrusion Die Design</a></li>
+									<li><a href="#">Tooling Design</a></li>
+									<li><a href="#">Manufacture</a></li>
+									<li><a href="#">Consult</a></li>
+									<li><a href="#">About Us</a></li>
+									<li><a href="#">Contact Us</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
