--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3>Quick Navigation</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Extrusion Die Design</a></li>
+									<li><a href="#">Tooling Design</a></li>
+									<li><a href="#">Manufacture</a></li>
+									<li><a href="#">Consult</a></li>
+									<li><a href="#">About Us</a></li>
+									<li><a href="#">Contact Us</a></li>
 								</ul>
 							</section>
 
