--- a/manufacture.html
+++ b/manufacture.html
@@ -73,7 +73,7 @@
 											<h3>The ExtrudiT difference</h3>
 											<p>We belive a good Extrusion die is one that offers a balance of achieving low manufacturing cost, high extrusion productivity whilst producing dimentionally true extrusions with good mechanical and cosmentic properties with a long service life.</p>
 											<footer>
-												<a href="#" class="button">Continue Reading</a>
+												<a href="#" class="button">Contact us</a>
 											</footer>
 										</section>
 
@@ -110,7 +110,7 @@
 											<p>Let ExtrudiT design, procure and deliver your next extrusion die. We understand that every customer's requirments are unique - using our combination of excellent design, a well made die and a controlled extrusion process, you are well on your way to acheive success with ease.</p>
 
 											<h3>Quality Extrusions Start Here</h3>
-											<p>Every profile is unique. The correct combination of excellent die design, combined with  a well made die which adheres to quality manufacturing processes and a tightly controlled extrusion are requirements to produces extrusions of outstanding quality. Dies created with an established manufacturing process and the right metallurgical structure are key to producing a quality extrusion. Let us take the inconvinience out of extruding the perfect profile by coordnating the design, manufacture and procurement of quality extrusion dies - and delivering them to your front door. </p>
+											<p>Every profile is unique. The correct combination of excellent die design, combined with  a well made die which adheres to quality manufacturing processes and a tightly controlled extrusion are requirements to produces extrusions of outstanding quality. Dies created with an established manufacturing process and the right metallurgical structure are key to producing a quality extrusion. Let us take the inconvinience out of extruding the perfect profile by coordnating the design, manufacture and procurement of quality extrusion dies - and delivering them to your front door. Free up your time to focus on </p>
 										</article>
 
 								</div>
@@ -136,15 +136,15 @@
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>Quick Navigation</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Extrusion Die Design</a></li>
+									<li><a href="#">Tooling Design</a></li>
+									<li><a href="#">Manufacture</a></li>
+									<li><a href="#">Consult</a></li>
+									<li><a href="#">About Us</a></li>
+									<li><a href="#">Contact Us</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
