trying to get bar under banner
added wrapper style 4 and cta2 so black bar after banner can be customised

contact us links are now correct .

image banner changed

index menu changes

semi hollow created

--- a/manufacture.html
+++ b/manufacture.html
@@ -71,7 +71,7 @@
 
 										<section>
 											<h3>The ExtrudiT difference</h3>
-											<p>We belive a good Extrusion die is one that offers a balance of achieving low manufacturing cost, high extrusion productivity whilst producing dimentionally true extrusions with good mechanical and cosmentic properties with a long service life.</p>
+											<p>We belive a good Extrusion die is one that aachieves a low manufacturing cost, high extrusion productivity whilst producing dimentionally true extrusions with good mechanical and cosmetic properties along with a long service life.</p>
 											<footer>
 												<a href="#" class="button">Contact us</a>
 											</footer>
@@ -110,7 +110,7 @@
 											<p>Let ExtrudiT design, procure and deliver your next extrusion die. We understand that every customer's requirments are unique - using our combination of excellent design, a well made die and a controlled extrusion process, you are well on your way to acheive success with ease.</p>
 
 											<h3>Quality Extrusions Start Here</h3>
-											<p>Every profile is unique. The correct combination of excellent die design, combined with  a well made die which adheres to quality manufacturing processes and a tightly controlled extrusion are requirements to produces extrusions of outstanding quality. Dies created with an established manufacturing process and the right metallurgical structure are key to producing a quality extrusion. Let us take the inconvinience out of extruding the perfect profile by coordnating the design, manufacture and procurement of quality extrusion dies - and delivering them to your front door. Free up your time to focus on </p>
+											<p>Every profile is unique. The correct combination of excellent die design, combined with  a well made die which adheres to quality manufacturing processes and a tightly controlled extrusion process are requirements to produces extrusions of outstanding quality. Dies created with established manufacturing processes and the right metallurgical structure are key to producing a quality extrusion. Let us take the inconvinience out of extruding the perfect profile by coordnating the design, manufacture and procurement of quality extrusion dies - and delivering them to your front door. Free up your time to focus on your other core competencies.</p>
 										</article>
 
 								</div>
@@ -124,15 +124,9 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3></h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
@@ -156,7 +150,7 @@
 										</div>
 										<div class="col-6 col-12-mobilep">
 											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
+										</div>d
 										<div class="col-12">
 											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
 										</div>
@@ -173,11 +167,7 @@
 
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
 						</ul>
 
 					<!-- Copyright -->
