added pictures minor menu changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Design Portfolio</a>
+									<a href="#">Design</a>
 									<ul>
 										<li>
                                            
@@ -63,7 +63,7 @@
 
 				</section>
         <!-- Banner bot introduced on top -->
-                <section id="cta" class="wrapper style4">
+                <section id="cta2" class="wrapper style4">
 					<div class="container">
 						<header>
 							<h2>Proudly designed in New Zealand</h2>
@@ -76,6 +76,7 @@
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
+						<div class="row gtr-200">
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
