added images to respective pages

--- a/ancillarytooling.html
+++ b/ancillarytooling.html
@@ -107,19 +107,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/SolidDies/a1.jpg" style="width:100%">
+  <img src="images/ancillary/Picture2.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="images/SolidDies/a2.jpg" style="width:100%">
+  <img src="images/ancillary/Screenshot%202020-11-25%20112827.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="images/SolidDies/a3.jpg" style="width:100%">
+  <img src="images/ancillary/Screenshot%202020-11-25%20120844.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
