--- a/hollowDies.html
+++ b/hollowDies.html
@@ -107,19 +107,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/SolidDies/a1.jpg" style="width:100%">
+  <img src="images/hollowdies/2691-1-PORTHOLE7.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="images/SolidDies/a2.jpg" style="width:100%">
+  <img src="images/hollowdies/Centre%20Port%201-PORTHOLE.JPG" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="images/SolidDies/a3.jpg" style="width:100%">
+  <img src="images/hollowdies/Centre%20Port%201-PORTHOLE-C-some%20text%20removed.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
