--- a/semihollow.html
+++ b/semihollow.html
@@ -107,19 +107,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/SolidDies/a1.jpg" style="width:100%">
+  <img src="images/semihollow/Box-Semi Hollow-PORTHOLE-Main.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="images/SolidDies/a2.jpg" style="width:100%">
+  <img src="images/semihollow/Box-Semi%20Hollow-Detail%202.JPG" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="images/SolidDies/a3.jpg" style="width:100%">
+  <img src="images/semihollow/Box-Semi%20Hollow-DWG.JPG" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
