--- a/hollowDies.html
+++ b/hollowDies.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Design Portfolio</a>
+									<a href="#">Design</a>
 									<ul>
 										<li>
                                            
