--- a/semihollow.html
+++ b/semihollow.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Design Portfolio</a>
+									<a href="#">Design</a>
 									<ul>
 										<li>
                                            
@@ -107,7 +107,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/semihollow/Box-Semi Hollow-PORTHOLE-Main.jpg" style="width:100%">
+  <img src="images/semihollow/Box-Semi%20Hollow-PORTHOLE-Main.JPG" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
