minor css changes
added some images tried to push images

--- a/Index-BANA.html
+++ b/Index-BANA.html
@@ -14,13 +14,13 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header  font-size:3.7vw   font-size:2.5vw -->
+			<!-- Header -->
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo" style="font-family:impact ;"><span style="color:#5b9bd5">Extrud</span>iT</span> 
+						<h1><a href="index.html" id="logo" style="font-family:impact"><span style="color:#5b9bd5">Extrud</span>iT</span> 
                             <!--<a href="index.html" id="logo" style="font-family:impact">Extrud<span style="color:#5b9bd5">iT</span> -->
-                            <em><span style="font-family:calibri; ;" > - Aluminium extrusion tooling solutions</span> </em></a></h1>
+                            <em><span style="font-family:calibri" > - Aluminium extrusion tooling solutions</span> </em></a></h1>
                             <!--<em><span style="font-family:calibri" > - Aluminium extrusion dies and tools</span> </em></a></h1>-->
                             
                     
