--- a/hollowDies.html
+++ b/hollowDies.html
@@ -75,7 +75,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/hollowdies/2691-1-PORTHOLE7.jpg" style="width:100%">
+  <img src="images/hollowdies/2691-1-PORTHOLE7.JPG" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
