made changes as of mathias requested
spelling changes
phrasing changes
banner changes
gas picture changes in channels

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                                         <li><a href="ancillarytooling.html">Ancillary Tooling</a></li>
                                         <li><a href="specialDies.html">Special Dies</a></li>
                                         <li><a href="#">Simulations</a></li>
+                                        <li><a href="calculators.html">Calculators</a></li>
                                          
                                         
 									</ul>
